@@ -7,64 +7,67 @@
      <td align=center valign=middle colspan=3 width="100%%"
 	 bgcolor="%(margin_color)s">
       <h1>%(long_package_name)s</h1>
-      <h2>%(page_title)s</h2>
      </td>
     </tr>
 
     <tr>
-
      <td align=left valign=top width="15%%" bgcolor="%(margin_color)s">
       <table align=left>
-	<tr><td bgcolor="%(caption_color)s"><b>General info</b></td></tr>
+
 	<tr><td><font size=-1>
 	   <a href="%(html_base)s/HTML/index.html">
-	    <b>Entry page</b></a><br>
-	   <a href="%(html_base)s/HTML/status.html">
-	    <b>Project status</b></a><br>
-	   <a href="%(html_base)s/HTML/disclaim.html">
-	    <b>Translator disclaimer</b></a><br>
-	   <a href="%(html_base)s/HTML/domains.html">
-	    <b>Textual domains</b></a><br>
-	   <a href="%(html_base)s/HTML/teams.html">
-	    <b>Language teams</b></a><br>
-	   <a href="%(cgi_base)s/babyl.cgi">
-	    <b>Folders</b></a><br>
+	    <b>Welcome</b></a><br>
 	  </font></td></tr>
 	<tr><td height=5></td></tr>
-	<tr><td bgcolor="%(caption_color)s"><b>Replies</b></td></tr>
+
+	<tr><td bgcolor="%(caption_color)s"><b>Overview</b></td></tr>
+	<tr><td><font size=-1>
+	   <a href="%(html_base)s/HTML/domains.html">
+	    <b>The Packages</b></a><br>
+	   <a href="%(html_base)s/HTML/teams.html">
+	    <b>The Teams</b></a><br>
+	   <a href="%(html_base)s/HTML/whydisclaim.html">
+	    <b>The&nbsp;Disclaimer</b></a><br>
+	   <a href="%(html_base)s/HTML/robot.html">
+	    <b>The Robot</b></a><br>
+	  </font></td></tr>
+	<tr><td height=5></td></tr>
+
+	<tr><td bgcolor="%(caption_color)s"><b>Info for...</b></td></tr>
 	<tr><td><font size=-1>
 	   <a href="%(html_base)s/HTML/maintainers.html">
 	    <b>Maintainers</b></a><br>
 	   <a href="%(html_base)s/HTML/leaders.html">
-	    <b>Leaders</b></a><br>
+	    <b>Coordinators</b></a><br>
 	   <a href="%(html_base)s/HTML/translators.html">
 	    <b>Translators</b></a><br>
 	 </font></td></tr>
 	<tr><td height=5></td></tr>
-	<tr><td bgcolor="%(caption_color)s"><b>gettext</b></td></tr>
+
+	<tr><td bgcolor="%(caption_color)s"><b>Documents</b></td></tr>
 	<tr><td><font size=-1>
-	   <a href="%(html_base)s/HTML/gettext.html"><b>Manual</b></a><br>
-	   <a href="%(html_base)s/HTML/readme.html">
-	    <b>README</b></a><br>
 	   <a href="%(html_base)s/HTML/thanks.html">
 	    <b>Contributors</b></a><br>
-	   <a href="%(html_base)s/HTML/todo.html">
-	    <b>To do</b></a><br>
+	   <a href="%(html_base)s/HTML/files.html">
+	    <b>File List</b></a><br>
+	   <a href="%(html_base)s/HTML/software.html">
+	    <b>Tools</b></a><br>
 	 </font></td></tr>
+	<tr><td height=5></td></tr>
+
       </table>
      </td>
 
      <td align=left valign=top width="90%%">
 INSERTION_POINT
-      <p><font size="-1">Last recomputed on %(time_stamp)s</font></p>
      </td>
-
     </tr>
 
     <tr align=left valign=bottom>
-     <td align=right valign=middle colspan=3 width="100%%"
-	 bgcolor="%(margin_color)s">
-      Your <a href="mailto:translation@iro.umontreal.ca">comments</a> are welcome.
+     <td></td>
+     <td width="100%%" bgcolor="%(margin_color)s">
+      <p align=left><font size="-2">(Last updated on %(time_stamp)s.)</font></p>
+      <p align=right>Your <a href="mailto:comments@translationproject.org">comments</a> are welcome.</p>
      </td>
     </tr>
   </table>
